# weather-agents-termux

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  models.yaml
config/skills/: code_reviewer.md  security_auditor.md  web_research.md
src/weather_agents/: __init__.py
src/weather_agents/agents/: dew.py  fog.py  frost.py  rain.py  snow.py  sunshine.py
src/weather_agents/cli/: main.py
src/weather_agents/core/: __init__.py  agent.py  bus.py  cache.py  config.py  factory.py  icons.py  llm.py  logger.py  mcp.py  memory.py  skill.py  tool.py  workspace.py
src/weather_agents/plugins/: loader.py
src/weather_agents/skills/: __init__.py  api_integrator.py  arch_designer.py  ci_cd_manager.py  code_analysis.py  code_generator.py  code_reviewer.py  content_writer.py  data_transformer.py  document_analysis.py  emotional_companion.py  loader.py  performance_checker.py  security_auditor.py  self_evolve.py  sys_operator.py  task_planner.py  web_research.py  workflow_designer.py
src/weather_agents/tools/: builtin.py  delegate.py
src/weather_agents/web/: __init__.py  app.py  websocket.py
src/weather_agents/web/static/: index.html
tests/: conftest.py  test_agent.py  test_builtin_tools.py  test_bus.py  test_cli.py  test_config.py  test_delegate.py  test_factory.py  test_integration.py  test_llm.py  test_mcp.py  test_memory.py  test_plugins.py  test_snow.py  test_tool.py  test_workspace.py
