[project]
name = "weather-agents"
version = "0.3.0"
description = "Weather-themed multi-agent system: Fog, Rain, Frost, Snow, Dew"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.60",
    "typer>=0.15",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.21",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
wa = "weather_agents.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
