[project]
name = "weather-agents"
version = "1.0.0"
description = "Weather-themed multi-agent system: Fog, Rain, Frost, Snow, Dew — a universal AI tool orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["multi-agent", "llm", "orchestration", "ai", "tool-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.60",
    "typer>=0.15",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.21",
    "httpx>=0.28",
    "ddgs>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[project.scripts]
wa = "weather_agents.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agents"]
force-include = { "config" = "weather_agents/config" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["weather_agents"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/weather_agents/skills/api_integrator.py",
    "src/weather_agents/skills/arch_designer.py",
    "src/weather_agents/skills/ci_cd_manager.py",
    "src/weather_agents/skills/code_analysis.py",
    "src/weather_agents/skills/code_generator.py",
    "src/weather_agents/skills/content_writer.py",
    "src/weather_agents/skills/data_transformer.py",
    "src/weather_agents/skills/document_analysis.py",
    "src/weather_agents/skills/performance_checker.py",
    "src/weather_agents/skills/sys_operator.py",
    "src/weather_agents/skills/task_planner.py",
    "src/weather_agents/skills/workflow_designer.py",
]
